--- a/src/global/_variables.scss
+++ b/src/global/_variables.scss
@@ -12,7 +12,8 @@ $screen-md-min: $screen-md;
 $creen-md-max: 1200px;
 $screen-lg-min: 1200px;
 
-$screen-height: 800px;
+$screen-height-md: 820px;
+$screen-height-sm: 600px;
 
 //Colors
 
